--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -6,6 +6,10 @@ name: Upload Python Package
 on:
   release:
     types: [created]
+  push:
+    tags:
+      - "*.r*"
+      - "*.rc*"
 
 jobs:
   deploy:
