--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -37,4 +37,5 @@ jobs:
         PACKAGE_VERSION: ${{ steps.tagName.outputs.VERSION }}
       run: |
         python setup.py sdist bdist_wheel
-        twine upload dist/*
+        cd /dist
+        ls
