Restored deployment configuration

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -37,5 +37,4 @@ jobs:
         PACKAGE_VERSION: ${{ steps.tagName.outputs.VERSION }}
       run: |
         python setup.py sdist bdist_wheel
-        cd /dist
-        ls
+        twine upload dist/*
